--- a/inkfused_tattoo/landing/templates/index.html
+++ b/inkfused_tattoo/landing/templates/index.html
@@ -5,15 +5,74 @@
 
 {% block content %}
 
-<div> 
+<link rel="stylesheet" href="{% static 'css/index.css' %}">
 
 
-    <h1>Welcome to Inkfused Tattoo Studio</h1>
+
+ <h1>Welcome to Inkfused Tattoo Studio</h1>
+
+
+
+<p>Video</p>
+
+
+
+ <h1>Despre mine</h1>
+
+<div class="about-me" id="about-me">
+
+
+    <div class="left-container"> 
+
+       
+
+        <div class="image-container">
+            <img src="{% static 'images/about_me/about_me_1.jpg' %}" alt="Inkfused Logo" style="width: 100%; height: auto;">
+        </div>
+
+         <div class="image-container">
+            <img src="{% static 'images/about_me/1.jpg' %}" alt="Inkfused Logo" style="width: 100%; height: auto;">
+        </div>
+
+         <div class="image-container">
+            <img src="{% static 'images/about_me/2.jpg' %}" alt="Inkfused Logo" style="width: 100%; height: auto;">
+        </div>
+        
+         <div class="image-container">
+            <img src="{% static 'images/about_me/3.jpg' %}" alt="Inkfused Logo" style="width: 100%; height: auto;">
+        </div>
+    
+    </div>
+
+    <div class="middle-container"> 
+        
+        <p>At Inkfused, we prioritize safety and hygiene, using only the highest quality materials and equipment. Our studio is designed to make you feel comfortable and relaxed, allowing you to enjoy the process of getting your tattoo.</p>
+
+    </div>
+
+    <div class="right-container"> 
+       
+       
+
+        <div class="image-container">
+            <img src="{% static 'images/about_me/about_me_2.jpg' %}" alt="Inkfused Logo" style="width: 100%; height: auto;">
+        </div>
+
+         <div class="image-container">
+            <img src="{% static 'images/about_me/4.jpg' %}" alt="Inkfused Logo" style="width: 100%; height: auto;">
+        </div>
+
+         <div class="image-container">
+            <img src="{% static 'images/about_me/5.jpg' %}" alt="Inkfused Logo" style="width: 100%; height: auto;">
+        </div>
+        
+         <div class="image-container">
+            <img src="{% static 'images/about_me/6.jpg' %}" alt="Inkfused Logo" style="width: 100%; height: auto;">
+        </div>
+
+    </div>
+
 </div>
-
-
-
-
 
 
 
